<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    tools:context=".HomeActivity">


    <Button
        android:id="@+id/loginbutton"

        android:layout_width="181dp"
        android:layout_height="39dp"

        android:layout_marginTop="214dp"
        android:background="@drawable/buttonshape"
        android:onClick="loginbutton"
        android:text="@string/loginbutton"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <Button
        android:id="@+id/registerbutton"

        android:layout_width="181dp"
        android:layout_height="39dp"

        android:layout_marginTop="23dp"
        android:background="@drawable/buttonshape"
        android:onClick="registerbutton"
        android:text="@string/registerbutton"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/loginbutton" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="278dp"
        android:layout_height="210dp"
        android:layout_marginTop="32dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logo_volunteer" />

    <TextView
        android:id="@+id/textViewBemvindo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="41dp"
        android:layout_marginLeft="41dp"
        android:layout_marginTop="60dp"
        android:text="@string/textViewWelcome"
        android:textColor="#000000"

        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>