<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".InstLoginActivity">

    <Button
        android:id="@+id/loginbutton3"

        android:layout_width="181dp"
        android:layout_height="39dp"

        android:layout_marginTop="32dp"
        android:background="@drawable/buttonshape"
        android:onClick="loginbutton"
        android:text="@string/loginbutton3"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextPassword" />

    <EditText
        android:id="@+id/editTextTextEmailAddress"
        android:layout_width="275dp"
        android:layout_height="60dp"
        android:layout_marginTop="190dp"
        android:drawableStart="@drawable/custom_email_icon"
        android:ems="10"
        android:background="@drawable/custom_edittext"
        android:hint="@string/emailhint"
        android:drawablePadding="12dp"
        android:paddingStart="12dp"
        android:inputType="textEmailAddress"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editTextTextPassword"
        android:layout_width="276dp"
        android:layout_height="50dp"
        android:layout_marginTop="15dp"
        android:drawableStart="@drawable/custom_lock_icon"
        android:ems="10"
        android:background="@drawable/custom_edittext"
        android:hint="@string/passwordhint"
        android:drawablePadding="12dp"
        android:paddingStart="12dp"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextEmailAddress" />

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="278dp"
        android:layout_height="210dp"
        android:layout_marginTop="25dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logo_volunteer" />

</androidx.constraintlayout.widget.ConstraintLayout>