<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterActivity">

    <Button
        android:id="@+id/registerbutton2"
        android:layout_width="166dp"
        android:layout_height="40dp"
        android:layout_marginBottom="32dp"
        android:background="@drawable/buttonshape"
        android:text="@string/registerbutton2"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/buttonvoltar"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/buttonvoltar"
        android:layout_width="166dp"
        android:layout_height="40dp"
        android:layout_marginBottom="32dp"
        android:background="@drawable/buttonshape"
        android:text="@string/buttonvoltar"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/registerbutton2" />

    <EditText
        android:id="@+id/editTextNome"
        android:layout_width="276dp"
        android:layout_height="50dp"
        android:layout_marginTop="40dp"
        android:background="@drawable/custom_edittext"
        android:drawablePadding="12dp"
        android:ems="10"
        android:hint="Nome de utilizador"
        android:inputType="text|textEmailAddress"
        android:paddingStart="12dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editTextEmail"
        android:layout_width="276dp"
        android:layout_height="50dp"
        android:layout_marginTop="28dp"
        android:background="@drawable/custom_edittext"
        android:drawablePadding="12dp"
        android:ems="10"
        android:hint="@string/emailhint"
        android:inputType="text|textEmailAddress"
        android:paddingStart="12dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextNome" />

    <EditText
        android:id="@+id/editTextPassword"
        android:layout_width="276dp"
        android:layout_height="50dp"
        android:layout_marginTop="28dp"
        android:background="@drawable/custom_edittext"
        android:drawablePadding="12dp"
        android:ems="10"
        android:hint="@string/passwordhint"
        android:inputType="textPassword"
        android:paddingStart="12dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextEmail" />

    <Spinner
        android:id="@+id/spinnertipodeconta2"
        android:layout_width="150dp"
        android:layout_height="36dp"
        android:layout_marginTop="28dp"
        android:background="@drawable/custom_edittext2"
        android:paddingStart="12dp"
        android:paddingLeft="12dp"
        android:text="Escolha uma categoria"
        android:textColor="@color/colorPrimary"
        android:tooltipText="Categoria"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/textView4"
        app:layout_constraintTop_toBottomOf="@+id/editTextPassword" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="128dp"
        android:layout_height="22dp"
        android:layout_marginTop="32dp"
        android:text="Tipo de Conta"
        android:textSize="18sp"
        app:layout_constraintEnd_toStartOf="@+id/spinnertipodeconta2"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextPassword" />

</androidx.constraintlayout.widget.ConstraintLayout>