<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    tools:context=".LoginActivity">

    <Button
        android:id="@+id/loginbutton"
        android:layout_width="181dp"
        android:layout_height="39dp"
        android:layout_marginBottom="72dp"
        android:background="@drawable/buttonshape"
        android:text="@string/loginbutton2"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/editTextTextEmailAddress"
        android:layout_width="276dp"
        android:layout_height="50dp"
        android:layout_marginTop="176dp"
        android:background="@drawable/custom_edittext"
        android:drawableStart="@drawable/custom_email_icon"
        android:drawablePadding="12dp"
        android:ems="10"
        android:hint="Nome de Utilizador"
        android:inputType="textEmailAddress"
        android:paddingStart="12dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editTextTextPassword"
        android:layout_width="276dp"
        android:layout_height="50dp"
        android:layout_marginTop="15dp"
        android:background="@drawable/custom_edittext"
        android:drawableStart="@drawable/custom_lock_icon"
        android:drawablePadding="12dp"
        android:ems="10"
        android:hint="@string/passwordhint"
        android:inputType="textPassword"
        android:paddingStart="12dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextEmailAddress" />

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="278dp"
        android:layout_height="210dp"
        android:layout_marginTop="4dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.511"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logo_volunteer" />

    <TextView
        android:id="@+id/textViewInscrever"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/textViewInscrever"
        android:clickable="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/loginbutton" />

</androidx.constraintlayout.widget.ConstraintLayout>