<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EditarInfoAcao">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#FFFFFF">

        <Button
            android:id="@+id/buttoneditar"
            android:layout_width="168dp"
            android:layout_height="37dp"
            android:layout_marginTop="15dp"
            android:background="@drawable/buttonshape2"
            android:text="Guardar Alterações"
            android:textColor="#FFFFFF"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/buttoncancelaredit"
            app:layout_constraintTop_toBottomOf="@+id/editTextEditarInstituicaoResposavel" />

        <Button
            android:id="@+id/buttoncancelaredit"
            android:layout_width="168dp"
            android:layout_height="37dp"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="20dp"
            android:background="@drawable/buttonshape2"
            android:text="Cancelar"
            android:textColor="#FFFFFF"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/buttoneditar"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editTextEditarInstituicaoResposavel" />

        <EditText
            android:id="@+id/editTextEditarContactos"
            android:layout_width="291dp"
            android:layout_height="70dp"
            android:layout_marginTop="15dp"
            android:background="@drawable/custom_edittext2"
            android:drawablePadding="12dp"
            android:ems="10"
            android:gravity="start|top"
            android:hint="Contactos"
            android:paddingStart="12dp"
            android:paddingTop="8dp"
            android:textColor="@color/colorPrimary"
            android:textColorHint="#848794"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editTextEditarHorarios" />

        <EditText
            android:id="@+id/editTextEditarNomeAcao"
            android:layout_width="291dp"
            android:layout_height="50dp"
            android:layout_marginTop="15dp"
            android:background="@drawable/custom_edittext2"
            android:drawablePadding="12dp"
            android:ems="10"
            android:hint="@string/editTextNomeAcao"
            android:paddingStart="12dp"
            android:textColor="@color/colorPrimary"
            android:textColorHint="#848794"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView5" />

        <EditText
            android:id="@+id/editTextEditarHorarios"
            android:layout_width="291dp"
            android:layout_height="70dp"
            android:layout_marginTop="15dp"
            android:background="@drawable/custom_edittext2"
            android:drawablePadding="12dp"
            android:ems="10"
            android:gravity="start|top"
            android:hint="Horários"
            android:inputType="textMultiLine"
            android:paddingStart="12dp"
            android:paddingTop="8dp"
            android:textColor="@color/colorPrimary"
            android:textColorHint="#848794"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editTextEditarLocal" />

        <EditText
            android:id="@+id/editTextEditarInstituicaoResposavel"
            android:layout_width="291dp"
            android:layout_height="70dp"
            android:layout_marginTop="15dp"
            android:background="@drawable/custom_edittext2"
            android:drawablePadding="12dp"
            android:ems="10"
            android:gravity="start|top"
            android:hint="Instituição Responsável"
            android:paddingStart="12dp"
            android:paddingTop="8dp"
            android:textColor="@color/colorPrimary"
            android:textColorHint="#848794"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editTextEditarResultadosEsperados" />

        <EditText
            android:id="@+id/editTextEditarResultadosEsperados"
            android:layout_width="291dp"
            android:layout_height="70dp"
            android:layout_marginTop="15dp"
            android:background="@drawable/custom_edittext2"
            android:drawablePadding="12dp"
            android:ems="10"
            android:gravity="start|top"
            android:hint="@string/editTextResultadosEsperados"
            android:inputType="textMultiLine"
            android:paddingStart="12dp"
            android:paddingTop="8dp"
            android:textColor="@color/colorPrimary"
            android:textColorHint="#848794"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editTextEditarObjetivos" />

        <EditText
            android:id="@+id/editTextEditarObjetivos"
            android:layout_width="291dp"
            android:layout_height="70dp"
            android:layout_marginTop="15dp"
            android:background="@drawable/custom_edittext2"
            android:drawablePadding="12dp"
            android:ems="10"
            android:gravity="start|top"
            android:hint="@string/editTextObjetivos"
            android:inputType="textMultiLine"
            android:paddingStart="12dp"
            android:paddingTop="8dp"
            android:textColor="@color/colorPrimary"
            android:textColorHint="#848794"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editTextEditarContactos" />

        <EditText
            android:id="@+id/editTextEditarLocal"
            android:layout_width="291dp"
            android:layout_height="50dp"
            android:layout_marginTop="15dp"
            android:background="@drawable/custom_edittext2"
            android:drawablePadding="12dp"
            android:ems="10"
            android:gravity="start|top"
            android:hint="Local"
            android:paddingStart="12dp"
            android:paddingTop="8dp"
            android:textColor="@color/colorPrimary"
            android:textColorHint="#848794"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editTextEditarNomeAcao" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="Faça as Alterações Necessárias"
            android:textColor="@color/colorAccent"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>